test_datas/compile_fail/missing_interface_body.pgl
package bad_interface;

type Reader interface ;
