test_datas/compile_fail/missing_interface_body.pgl.error
/home/sream/workspace/pangu/test_datas/compile_fail/missing_interface_body.pgl:3:23: error: interface need '{', but get lexer <Symbol> content = ";"
type Reader interface ;
                      ^
